--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
     <div class="container-fluid app-shell py-4">
         <div id="homeHero" class="hero text-center mb-5">
             <h1 class="display-4 fw-bold"><i class="bi bi-book"></i> SOURCE-IT My path by Jemarin</h1>
-            <p class="lead">Recursos para aprender algo de informática a nivel STI+ASIR+DAM</p>
+            <p class="lead">Recursos para dormir facil si tienes sueño, tomate un cafe bitch!</p>
         </div>
         <section class="music-player p-3 mb-4">
             <div class="music-top">
