--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         .neon-text {
             font-family: 'Orbitron', sans-serif;
             font-weight: 900;
-            font-size: 1.8rem;
+            font-size: 1.1rem;
             background: linear-gradient(90deg, #00ff88, #00ccff, #ff00ff, #00ff88);
             background-size: 200% 100%;
             -webkit-background-clip: text;
@@ -55,6 +55,21 @@
             filter: drop-shadow(0 0 15px #00ff88) drop-shadow(0 0 25px #00ccff);
             animation: wave-text-mega 3s ease-in-out infinite, gradient-shift 4s ease infinite;
             letter-spacing: 0.1em;
+            display: inline-flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            line-height: 1.05;
+            gap: 0.08rem;
+            text-align: center;
+            min-width: 104px;
+            text-decoration: none;
+        }
+        .neon-text .brand-icon {
+            font-size: 1.25rem;
+        }
+        .neon-text .brand-label {
+            font-size: 0.95rem;
         }
         @keyframes gradient-shift {
             0%, 100% { background-position: 0% center; }
@@ -360,7 +375,7 @@
         }
         .music-player.is-pinned {
             position: fixed;
-            top: 50%;
+            top: 57%;
             left: 10px;
             transform: translateY(-50%);
             width: min(270px, calc(100vw - 20px));
@@ -789,7 +804,10 @@
     <!-- Navbar Neón -->
     <nav class="navbar-neon navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="neon-text" href="index.html"><i class="bi bi-house-door"></i> SOURCE-IT</a>
+            <a class="neon-text" href="index.html">
+                <span class="brand-icon"><i class="bi bi-house-door"></i></span>
+                <span class="brand-label">SOURCE-IT</span>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" style="border-color: #00ff88;">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -978,7 +996,7 @@
     </div>
 
     <footer class="bg-dark text-white text-center py-4 mt-5">
-        <p>Created by Jemarin, si tocas el pingüino cambio de color ^^</p>
+        <p>Created by Jemarin, si me tocas el pingüino cambio de color ^^</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -1156,6 +1174,7 @@
             pinToggleBtn.classList.toggle('active', isPinned);
             pinToggleBtn.textContent = isPinned ? 'Desfijar' : 'Fijar';
         }
+
 
         function midiToFreq(midi) {
             return 440 * Math.pow(2, (midi - 69) / 12);
@@ -1385,7 +1404,6 @@
         selectTrack(0);
         setCompact(true);
         setPinned(true);
-
         const homeHero = document.getElementById('homeHero');
         const homeGrid = document.getElementById('homeGrid');
         const spaContent = document.getElementById('spaContent');
@@ -1409,6 +1427,7 @@
         let injectedStyleNodes = [];
         let injectedScriptNodes = [];
         let spaFrame = null;
+        let activeSpaRoute = 'home';
 
         function normalizeRoute(route) {
             if (!route) return 'home';
@@ -1418,6 +1437,7 @@
         }
 
         function showHomeView() {
+            activeSpaRoute = 'home';
             homeHero.classList.remove('d-none');
             homeGrid.classList.remove('d-none');
             spaContent.classList.add('d-none');
@@ -1448,6 +1468,7 @@
         }
 
         function loadRouteInIframe(normalized, pushState = true) {
+            activeSpaRoute = normalized;
             clearSpaAssets();
             homeHero.classList.add('d-none');
             homeGrid.classList.add('d-none');
@@ -1504,6 +1525,7 @@
             }
 
             try {
+                activeSpaRoute = normalized;
                 const response = await fetch(normalized, { cache: 'no-cache' });
                 if (!response.ok) throw new Error(`No se pudo cargar ${normalized}`);
                 const html = await response.text();
