--- a/git_github.html
+++ b/git_github.html
@@ -149,7 +149,7 @@ git push -u origin feature/login</div>
         </div>
 
         <div class="alert alert-success-custom alert-custom mt-4">
-            <strong>Contáctame:</strong> <a href="mailto:jesustelefonico@gmail.com">jesustelefonico@gmail.com</a>
+            <strong>Contáctame:</strong> <a href="mailto:artemugiocursojava@gmail.com">artemugiocursojava@gmail.com</a>
         </div>
     </div>
 
