--- a/figma.html
+++ b/figma.html
@@ -6,171 +6,8 @@
     <title>Figma - Guía Completa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Space+Mono:wght@400;700&family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Space+Mono:wght@400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/site.css">
-    <style>
-        .figma-hero {
-            background: linear-gradient(135deg, #2b1b53 0%, #0a4d68 60%, #088395 100%);
-            color: #fff;
-            border-radius: 0 0 22px 22px;
-            padding: 4.25rem 1.5rem;
-            box-shadow: 0 12px 28px rgba(0, 0, 0, 0.22);
-        }
-        .figma-hero h1 {
-            font-family: 'Orbitron', sans-serif;
-            letter-spacing: 0.04em;
-            font-weight: 900;
-            margin-bottom: 0.8rem;
-        }
-        .figma-hero p {
-            max-width: 920px;
-            color: #deebff;
-            font-size: 1.08rem;
-        }
-        .figma-kicker {
-            display: inline-block;
-            margin-bottom: 0.9rem;
-            border: 1px solid rgba(255, 255, 255, 0.45);
-            border-radius: 999px;
-            padding: 0.28rem 0.7rem;
-            font-size: 0.82rem;
-            color: #f8fafc;
-            background: rgba(255, 255, 255, 0.12);
-        }
-        .figma-section-title {
-            margin: 2.5rem 0 1rem;
-        }
-        .figma-panel {
-            border: 1px solid #dbe4ee;
-            border-radius: 1rem;
-            padding: 1.3rem;
-            background: #fff;
-            box-shadow: 0 10px 20px rgba(5, 18, 32, 0.06);
-        }
-        .figma-course-box {
-            background: linear-gradient(160deg, #ffffff 0%, #eef4ff 100%);
-        }
-        .figma-meta {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.65rem;
-            margin: 0.9rem 0 1.1rem;
-        }
-        .figma-meta span {
-            background: #e2ecff;
-            color: #123361;
-            font-weight: 700;
-            border-radius: 999px;
-            padding: 0.25rem 0.6rem;
-            font-size: 0.82rem;
-        }
-        .figma-btn {
-            display: inline-block;
-            text-decoration: none;
-            font-weight: 700;
-            padding: 0.65rem 1.1rem;
-            border-radius: 999px;
-            background: #f97316;
-            color: #fff;
-            border: 1px solid #f97316;
-            transition: all .2s ease;
-        }
-        .figma-btn:hover {
-            transform: translateY(-1px);
-            background: #ea580c;
-            border-color: #ea580c;
-            color: #fff;
-        }
-        .figma-grid {
-            display: grid;
-            gap: 1rem;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        }
-        .figma-card {
-            border: 1px solid #dce5f2;
-            border-radius: 1rem;
-            padding: 1rem;
-            background: #fff;
-            transition: transform .2s ease, box-shadow .2s ease;
-        }
-        .figma-card:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 16px 24px -14px rgba(0, 20, 60, .5);
-        }
-        .figma-card h3 {
-            font-size: 1.1rem;
-            margin-bottom: 0.55rem;
-            color: #10243f;
-        }
-        .figma-card p {
-            margin-bottom: 0.7rem;
-            color: #334155;
-            font-size: 0.94rem;
-        }
-        .figma-list {
-            margin: 0;
-            padding-left: 1.1rem;
-        }
-        .figma-list li {
-            margin-bottom: 0.35rem;
-            color: #253244;
-        }
-        .figma-list a {
-            color: #0b5ed7;
-            text-decoration: none;
-        }
-        .figma-list a:hover {
-            text-decoration: underline;
-        }
-        .figma-time {
-            color: #0b5ed7;
-            background: #eaf2ff;
-            border-radius: 999px;
-            padding: 0.08rem 0.45rem;
-            margin-left: 0.2rem;
-            font-family: 'JetBrains Mono', monospace;
-            font-size: 0.75rem;
-        }
-        .figma-table-wrap {
-            overflow-x: auto;
-        }
-        .figma-table {
-            width: 100%;
-            border-collapse: collapse;
-            background: #fff;
-        }
-        .figma-table th, .figma-table td {
-            text-align: left;
-            padding: 0.75rem 0.8rem;
-            border-bottom: 1px solid #e2e8f0;
-            font-size: 0.93rem;
-        }
-        .figma-table th {
-            color: #0f172a;
-            background: #f8fafc;
-        }
-        .figma-table kbd {
-            background: #1e293b;
-            color: #fff;
-            padding: 0.16rem 0.45rem;
-            border-radius: 0.35rem;
-            font-family: 'JetBrains Mono', monospace;
-            font-size: 0.8rem;
-            border: 1px solid #0f172a;
-        }
-        .figma-platform a {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.4rem;
-            margin-top: 0.45rem;
-            font-weight: 700;
-            text-decoration: none;
-            color: #0a4d68;
-        }
-        .figma-platform a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
 <body>
     <section class="figma-hero">
@@ -193,7 +30,7 @@
             <a class="figma-btn" href="https://www.youtube.com/watch?v=VdS9ZGHHXWQ&t=120s">Ver curso completo en YouTube</a>
         </section>
 
-        <h2 class="section-title figma-section-title"><i class="bi bi-journal-richtext"></i> Temario por bloques con enlaces directos</h2>
+        <h2 class="figma-section-title"><i class="bi bi-journal-richtext"></i> Temario por bloques con enlaces directos</h2>
         <section class="figma-grid">
             <article class="figma-card">
                 <h3>Introduccion y setup</h3>
@@ -233,7 +70,7 @@
             </article>
         </section>
 
-        <h2 class="section-title figma-section-title"><i class="bi bi-keyboard"></i> Atajos esenciales de productividad</h2>
+        <h2 class="figma-section-title"><i class="bi bi-keyboard"></i> Atajos esenciales de productividad</h2>
         <section class="figma-panel figma-table-wrap">
             <table class="figma-table">
                 <thead>
@@ -251,7 +88,7 @@
             </table>
         </section>
 
-        <h2 class="section-title figma-section-title"><i class="bi bi-compass"></i> Plataformas similares y complementarias</h2>
+        <h2 class="figma-section-title"><i class="bi bi-compass"></i> Plataformas similares y complementarias</h2>
         <section class="figma-grid">
             <article class="figma-card figma-platform">
                 <h3>Figma</h3>
@@ -285,7 +122,7 @@
             </article>
         </section>
 
-        <h2 class="section-title figma-section-title"><i class="bi bi-link-45deg"></i> Recursos oficiales y comunidad</h2>
+        <h2 class="figma-section-title"><i class="bi bi-link-45deg"></i> Recursos oficiales y comunidad</h2>
         <section class="figma-panel">
             <p>Para seguir mejorando, combina documentacion oficial, comunidad y practica guiada. La combinacion que mejor funciona es: replicar una interfaz real, convertirla en componentes y despues pasarla a HTML/CSS.</p>
             <ul class="figma-list mb-0">
@@ -302,3 +139,4 @@
     <script src="assets/js/site-theme.js"></script>
 </body>
 </html>
+
