--- a/git_github.html
+++ b/git_github.html
@@ -149,7 +149,8 @@ git push -u origin feature/login</div>
         </div>
 
         <div class="alert alert-success-custom alert-custom mt-4">
-            <strong>Contáctame:</strong> <a href="mailto:artemugiocursojava@gmail.com">artemugiocursojava@gmail.com</a>
+            <strong>Contáctame:</strong> <a href="mailto:jemarin@birt.eus">jemarin@birt.eus</a> |
+            <strong>Discord:</strong> <a href="https://discord.gg/byCRavuB7e" target="_blank" rel="noopener noreferrer">discord.gg/byCRavuB7e</a>
         </div>
     </div>
 
