--- a/index.html
+++ b/index.html
@@ -180,7 +180,11 @@
     </div>
 
     <footer class="bg-dark text-white text-center py-4 mt-5">
-        <p>Created by Jemarin, si me tocas el pingüino cambio de color ^^</p>
+        <p class="mb-1">Created by Jemarin, si me tocas el pingüino cambio de color ^^</p>
+        <small class="support-note">
+            <button type="button" class="support-note-trigger" aria-describedby="supportNoteTooltip">¿Necesitas soporte técnico?</button>
+            <span id="supportNoteTooltip" class="support-note-tooltip" role="tooltip">Si tienes problemas con la red o con tus equipos en casa o en empresa, puedo realizar un estudio de cobertura y un plano técnico con LIDAR o AutoCAD para que ningún punto se quede sin señal ni con bajo rendimiento. También puedo modificar tu equipo: ampliaciones, modificaciones, cajas a medida, mejora de refrigeración, overclock, underclock y delid cuando procede. Además, instalo repetidores, switches y VPN propia; puedo crearte una web funcional o enseñarte cualquiera de las tecnologías que ves en esta web. Cuando una instalación está bien diseñada y ejecutada, el soporte a distancia es más eficiente. ¿Hablamos?</span>
+        </small>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
