--- a/Css_basico.html
+++ b/Css_basico.html
@@ -136,14 +136,14 @@
 
     <div class="hero text-center">
         <h1 class="display-5 fw-bold"><i class="bi bi-filetype-css"></i> CSS Básico</h1>
-        <p class="lead">Unidad 7 completa: desde introducción hasta metodología de nomenclatura profesional.</p>
+        <p class="lead">CSS con metodologia, resumido. CSS es un mundo muy grande ^^.</p>
     </div>
 
     <div class="container py-4">
         <div class="card-custom">
-            <div class="card-header-custom"><i class="bi bi-mortarboard"></i> CSS Especial - Programa Integrado</div>
+            <div class="card-header-custom"><i class="bi bi-mortarboard"></i> CSS Practicas</div>
             <div class="card-body">
-                <p>Contenido desarrollado a nivel formativo completo, estructurado por unidades temáticas de CSS: aplicación, selectores, modelo de cajas, posicionamiento, pseudoclases, formularios y buenas prácticas.</p>
+                <p>Contenido de CSS: aplicación, selectores, modelo de cajas, posicionamiento, pseudoclases, formularios y buenas prácticas.</p>
                 <div class="alert alert-info-custom alert-custom">
                     <strong>Meta:</strong> construir hojas de estilo escalables, mantenibles y accesibles, con criterio técnico para proyectos reales.
                 </div>
@@ -329,7 +329,7 @@ input:invalid { border-color: #ff6b35; }</div>
             </div>
         </div>
 
-        <h2 class="section-title"><i class="bi bi-code-slash"></i> Curso de Programación CSS3 + Emmet</h2>
+        <h2 class="section-title"><i class="bi bi-code-slash"></i> Seccion CSS3 + Emmet</h2>
         <div class="card-custom">
             <div class="card-body">
                 <p>Ruta rápida para practicar sintaxis CSS3 con abreviaturas Emmet y generar estructura HTML/CSS más rápido.</p>
@@ -402,12 +402,12 @@ fz1.2rem     -> font-size: 1.2rem;</div>
         <h2 class="section-title"><i class="bi bi-journal-code"></i> 10 Ejercicios Prácticos Guiados</h2>
         <div class="card-custom">
             <div class="card-body">
-                <p>Bloque de práctica progresiva para afianzar la Unidad 7. Cada ejercicio incluye objetivo técnico y una solución base para comparar.</p>
+                <p>Bloque de práctica progresiva. Cada ejercicio incluye objetivo técnico y una solución base para comparar.</p>
             </div>
         </div>
         <div class="accordion" id="cssEjerciciosAccordion">
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 1: Selectores básicos y combinados</button>
+                <button class="accordion-header">Selectores básicos y combinados</button>
                 <div class="accordion-content">
                     <p>Estiliza todos los párrafos dentro de <code>.articulo</code> y solo el primer párrafo de cada artículo.</p>
                     <div class="code-block">.articulo p { color: #0a4d68; }
@@ -420,7 +420,7 @@ fz1.2rem     -> font-size: 1.2rem;</div>
             </div>
 
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 2: Especificidad y cascada</button>
+                <button class="accordion-header">Especificidad y cascada</button>
                 <div class="accordion-content">
                     <p>Define un estilo base para botones y crea un modificador para botón crítico sin usar <code>!important</code>.</p>
                     <div class="code-block">.btn { background: #0a4d68; color: #fff; }
@@ -429,7 +429,7 @@ fz1.2rem     -> font-size: 1.2rem;</div>
             </div>
 
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 3: Unidades relativas</button>
+                <button class="accordion-header">Unidades relativas</button>
                 <div class="accordion-content">
                     <p>Crea tipografía escalable usando <code>rem</code> y bloque fluido con <code>clamp()</code>.</p>
                     <div class="code-block">html { font-size: 16px; }
@@ -439,7 +439,7 @@ h1 { font-size: clamp(1.8rem, 2vw + 1rem, 3rem); }
             </div>
 
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 4: Fondo y color con variables</button>
+                <button class="accordion-header">Fondo y color con variables</button>
                 <div class="accordion-content">
                     <p>Define paleta en <code>:root</code> y aplica gradiente al hero.</p>
                     <div class="code-block">:root {
@@ -454,7 +454,7 @@ h1 { font-size: clamp(1.8rem, 2vw + 1rem, 3rem); }
             </div>
 
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 5: Modelo de caja y spacing</button>
+                <button class="accordion-header">Modelo de caja y spacing</button>
                 <div class="accordion-content">
                     <p>Construye una tarjeta con padding interno, borde y sombra consistente.</p>
                     <div class="code-block">* { box-sizing: border-box; }
@@ -469,7 +469,7 @@ h1 { font-size: clamp(1.8rem, 2vw + 1rem, 3rem); }
             </div>
 
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 6: Flexbox para barra de acciones</button>
+                <button class="accordion-header">Flexbox para barra de acciones</button>
                 <div class="accordion-content">
                     <p>Alinea título a la izquierda y botones a la derecha en una misma fila.</p>
                     <div class="code-block">.toolbar {
@@ -482,7 +482,7 @@ h1 { font-size: clamp(1.8rem, 2vw + 1rem, 3rem); }
             </div>
 
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 7: Grid responsive de tarjetas</button>
+                <button class="accordion-header">Grid responsive de tarjetas</button>
                 <div class="accordion-content">
                     <p>Construye una rejilla que se adapte automáticamente al ancho disponible.</p>
                     <div class="code-block">.grid {
@@ -494,7 +494,7 @@ h1 { font-size: clamp(1.8rem, 2vw + 1rem, 3rem); }
             </div>
 
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 8: Pseudoclases y foco accesible</button>
+                <button class="accordion-header">Pseudoclases y foco accesible</button>
                 <div class="accordion-content">
                     <p>Aplica estados hover/focus-visible para navegación con teclado.</p>
                     <div class="code-block">a:hover { color: #05bfdb; }
@@ -506,7 +506,7 @@ button:focus-visible, a:focus-visible {
             </div>
 
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 9: Formularios con validación visual</button>
+                <button class="accordion-header">Formularios con validación visual</button>
                 <div class="accordion-content">
                     <p>Estiliza inputs válidos e inválidos sin JavaScript.</p>
                     <div class="code-block">input {
@@ -520,7 +520,7 @@ input:invalid { border-color: #ff6b35; }</div>
             </div>
 
             <div class="accordion-item">
-                <button class="accordion-header">Ejercicio 10: Nomenclatura BEM aplicada</button>
+                <button class="accordion-header">Nomenclatura BEM aplicada</button>
                 <div class="accordion-content">
                     <p>Refactoriza una card usando bloque, elemento y modificador.</p>
                     <div class="code-block">.card {}
@@ -547,7 +547,7 @@ input:invalid { border-color: #ff6b35; }</div>
 
         <section class="alfab-zone" aria-labelledby="alfab-title">
             <h2 class="alfab-title" id="alfab-title">Alfabetización en diseño y frontend</h2>
-            <p class="alfab-subtitle">Glosario visual ampliado con conceptos de UI, UX, HTML, CSS y JavaScript. Basado en tu contenido para reforzar la parte práctica de la unidad.</p>
+            <p class="alfab-subtitle">Glosario visual ampliado con conceptos de UI, UX, HTML, CSS y JavaScript:</p>
 
             <h3 class="alfab-section-title">1) Fundamentos de diseño</h3>
             <div class="alfab-grid">
