--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <span class="brand-label">SOURCE-IT</span>
                 <span class="hero-tagline">My Path by Jemarin</span>
             </h1>
-            <p class="mb-0">Guía centralizada para estudiar cada módulo técnico en una sola ventana.</p>
+            <p class="mb-0">Guía de recursos educativos(mis apuntes) en una sola ventana. Contactame si crees que algo es erroneo o debe mejorarse, el mejor soporte agradece las criticas constructivas, siempre.</p>
         </div>
         <section class="sections-board">
         <div id="homeGrid" class="row g-4">
