--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                     <li class="nav-item"><a class="nav-link-neon" href="hacking_etico.html">Hacking Ético</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="ia_lanzadera.html">IA</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="git_github.html">Git/GitHub</a></li>
-                    <li class="nav-item ms-3"><button id="themeToggle" class="theme-btn btn" title="Cambiar tema"><span class="penguin" aria-hidden="true">&#128039;</span><span class="visually-hidden">Cambiar tema</span></button></li>
                 </ul>
             </div>
         </div>
@@ -189,9 +188,15 @@
     </div>
 
     <footer class="bg-dark text-white text-center py-4 mt-5">
-        <p class="mb-1">Created by Jemarin, si me tocas el pingüino cambio de color ^^</p>
+        <p class="mb-1 d-inline-flex align-items-center gap-2">
+            <span>Created by Jemarin, si me tocas el pingüino cambio de color ^^</span>
+            <button id="themeToggle" class="theme-btn btn ms-1" title="Cambiar tema">
+                <span class="penguin" aria-hidden="true">&#128039;</span>
+                <span class="visually-hidden">Cambiar tema</span>
+            </button>
+        </p>
         <small class="support-note">
-            <button type="button" class="support-note-trigger" aria-describedby="supportNoteTooltip">¿Necesitas soporte técnico?</button>
+            <button type="button" class="support-note-trigger" aria-describedby="supportNoteTooltip">¿Necesitas soporte técnico? Mi hucha y tu red te lo agradecen.</button>
             <span id="supportNoteTooltip" class="support-note-tooltip" role="tooltip">Si tienes problemas con la red o con tus equipos en casa o en empresa, puedo realizar un estudio de cobertura y un plano técnico con LIDAR o AutoCAD para que ningún punto se quede sin señal ni con bajo rendimiento. También puedo modificar tu equipo: ampliaciones, modificaciones, cajas a medida, mejora de refrigeración, overclock, underclock y delid cuando procede. Además, instalo repetidores, switches y VPN propia; puedo crearte una web funcional o enseñarte cualquiera de las tecnologías que ves en esta web. Cuando una instalación está bien diseñada y ejecutada, el soporte a distancia es más eficiente. ¿Hablamos?</span>
         </small>
     </footer>
@@ -475,5 +480,3 @@
     <script src="assets/js/site-theme.js"></script>
 </body>
 </html>
-
-
