--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                     <li class="nav-item"><a class="nav-link-neon" href="hacking_etico.html">Hacking Ético</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="ia_lanzadera.html">IA</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="freeplane.html">Freeplane</a></li>
+                    <li class="nav-item"><a class="nav-link-neon" href="visualstudio_code.html">VS Code</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="git_github.html">Git/GitHub</a></li>
                 </ul>
             </div>
@@ -141,7 +142,7 @@
                 <span class="brand-label">SOURCE-IT</span>
                 <span class="hero-tagline">My Path by Jemarin</span>
             </h1>
-            <p class="mb-0">Guía de recursos educativos(mis apuntes) en una sola ventana. Contactame si crees que algo es erroneo o debe mejorarse, el mejor soporte agradece las criticas constructivas, siempre.</p>
+            <p class="mb-0">Guía de recursos educativos(mis apuntes) en una sola ventana. Contactame si crees que algo es erroneo o debe mejorarse, Eskerrik asko!.</p>
         </div>
         <section class="sections-board">
         <div id="homeGrid" class="row g-4">
@@ -169,6 +170,15 @@
                     <h3 class="mt-3">Calculadora IP</h3>
                     <p>Calcula subredes, rangos y hosts de manera interactiva.</p>
                     <a href="guia_redes.html#calculadora" class="btn btn-outline-primary mt-3">Usar</a>
+                </div>
+            </div>
+            <!-- tarjeta VS Code -->
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 p-4 text-center">
+                    <i class="bi bi-code-slash fs-1"></i>
+                    <h3 class="mt-3">VS Code</h3>
+                    <p>Editor gratuito con extensiones, themes y asistentes AI.</p>
+                    <a href="visualstudio_code.html" class="btn btn-outline-primary mt-3">Abrir</a>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3">
@@ -419,7 +429,8 @@
             'hacking_etico.html',
             'ia_lanzadera.html',
             'git_github.html',
-            'freeplane.html'
+            'freeplane.html',
+            'visualstudio_code.html'
         ]);
         let injectedStyleNodes = [];
         let injectedScriptNodes = [];
