--- a/index.html
+++ b/index.html
@@ -113,23 +113,30 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto align-items-center"><li class="nav-item"><a class="nav-link-neon" href="guia_redes.html">Redes</a></li>
+                <ul class="navbar-nav ms-auto align-items-center">
+                    <li class="nav-item"><a class="nav-link-neon" href="guia_redes.html">Redes</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="replanteos_red.html">Replanteos</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="linux_cheatsheet.html">Linux</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="virtualbox.html">VirtualBox</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="conversor_binario_hexadecimal.html">Conversor</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="MySQL.html">MySQL</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="dhcp_dns.html">DHCP/DNS</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="lenguajes_de_marcas.html">Lenguajes</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Css_basico.html">CSS Básico</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="Js_basico.html">JavaScript</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="python.html">Python</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="figma.html">Figma</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="hacking_etico.html">Hacking Ético</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="ia_lanzadera.html">IA</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="freeplane.html">Freeplane</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="visualstudio_code.html">VS Code</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="git_github.html">Git/GitHub</a></li>
+                    <!-- dropdown overflow -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link-neon dropdown-toggle" href="#" id="moreMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">Más</a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="moreMenu">
+                            <li><a class="dropdown-item" href="lenguajes_de_marcas.html">Lenguajes</a></li>
+                            <li><a class="dropdown-item" href="Css_basico.html">CSS Básico</a></li>
+                            <li><a class="dropdown-item" href="Js_basico.html">JavaScript</a></li>
+                            <li><a class="dropdown-item" href="python.html">Python</a></li>
+                            <li><a class="dropdown-item" href="figma.html">Figma</a></li>
+                            <li><a class="dropdown-item" href="hacking_etico.html">Hacking Ético</a></li>
+                            <li><a class="dropdown-item" href="ia_lanzadera.html">IA</a></li>
+                            <li><a class="dropdown-item" href="freeplane.html">Freeplane</a></li>
+                            <li><a class="dropdown-item" href="visualstudio_code.html">Visual Studio Code</a></li>
+                            <li><a class="dropdown-item" href="git_github.html">Git/GitHub</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -176,8 +183,8 @@
             <div class="col-md-6 col-lg-3">
                 <div class="card h-100 p-4 text-center">
                     <i class="bi bi-code-slash fs-1"></i>
-                    <h3 class="mt-3">VS Code</h3>
-                    <p>Editor gratuito con extensiones, themes y asistentes AI.</p>
+                    <h3 class="mt-3">Visual Studio Code</h3>
+                    <p>Editor gratuito con extensiones, themes y asistentes AI (Visual Studio Code).</p>
                     <a href="visualstudio_code.html" class="btn btn-outline-primary mt-3">Abrir</a>
                 </div>
             </div>
